# metamod

./: .gitignore  CMakeLists.txt  README.md  exports.def
include/metamod/: api.h  config.h.in  engine.h  engine_hooks.h  gamedll.h  gamedll_hooks.h  plugin_info.h  utils.h
src/: api.cpp  engine_hooks.cpp  gamedll_hooks.cpp
